## 6.0.0

- New: support for Android 14 & 15
- New: dynamic contrast for app themes
- Improved: icons replaced with new Material 3 symbols
- Improved: in-app colors and navigation transitions
- Improved: updated settings slider appearance
- Improved: splash screen on Android 12+
- Fixed: unlock animation not working correctly on Android 14+
- Fixed: broken splash screen animation on Android 14+
- Fixed: jerky animations after device changed dark mode automatically with screen turned off
- Fixed: new colors not being applied correctly in certain situations
- Fixed: deprecated Google Play developer profile link
- Fixed: buttons state changing during navigation transition
- Fixed: layout not displaying correctly on parallax page
- Fixed: invisible status bar icons on some devices with Android 11

## 5.6.1

- Improved: error logging feature
- Improved: maximum tilt effect intensity
- Improved: settings layout for large screens
- Improved: follow system accessibility animation reduction option
- Fixed: hopefully a big crash cause in the rendering algorithm

## 5.6.0

- New: zoom-in effect for lockscreen instead of zoom-out (can be switched in size section)
- New: separate swipe and tilt effect intensity controls
- New: interval selection for random wallpaper design option
- New: screen-off delay for Always On Display transition in "Other options" section
- New: logging section for debugging purposes
- Improved: Android 11 system zoom option removed as the integrated zoom effect is no longer jerky when tilt effect is enabled
- Improved: workaround for Samsung's implementation of dynamic colors
- Improved: 2-ring support for 24H clock in daily random time selection
- Improved: display refresh rate handling when battery saver is enabled
- Improved: app language selection
- Improved: unified logo experience
- Fixed: jerky zoom animation when tilt effect was turned on (finally!)
- Fixed: occasional glitch during zoom animation after unlocking