@@ -5,6 +5,7 @@
 - Improved: icons replaced with new Material 3 symbols
 - Improved: in-app colors and navigation transitions
 - Improved: updated settings slider appearance
+- Improved: reset message replaced with dialog
 - Improved: splash screen on Android 12+
 - Fixed: unlock animation not working correctly on Android 14+
 - Fixed: broken splash screen animation on Android 14+
